08-kuber/08-config/task2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task2-deployment
  namespace: lesson8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task2-deployment
  template:
    metadata:
      labels:
        app: task2-deployment
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.4
          volumeMounts:
            - name: task2-nginx-html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: task2-nginx-html
          configMap:
            name: task2-nginx-html

---
apiVersion: v1
kind: Service
metadata:
  name: task2-svc
  namespace: lesson8
spec:
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
  selector:
    app: task2-deployment

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task2-ingress
  namespace: lesson8
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microk8s.nedorezov.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task2-svc
                port:
                  number: 80
  tls:
    - hosts:
        - microk8s.nedorezov.ru
      secretName: task2-secret-tls
